test/conformance/chainsaw/generate/clusterpolicy/standard/existing/resourcequota-recreation-with-preconditions/recreated-generated-resources.yaml
apiVersion: v1
kind: ResourceQuota
metadata:
  name: default
  namespace: test-namespace
  labels:
    generate.kyverno.io/policy-name: resourcequota-recreation-with-preconditions
spec:
  hard:
    limits.cpu: "4"
